# llms-hub

./: README.md
medical-finetune/: pyproject.toml
medical-finetune/src/: dataset_utils.py  process_datasets.py
prompting/: prompt_engineering.ipynb
