[tool.poetry]
name = "medical-llm"
version = "0.1.0"
description = "Instruction Fine-tuning on medical data"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
