[tool.poetry]
name = "medical-llm"
version = "0.1.0"
description = "Instruction Fine-tuning on medical data"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "2.17.0"
pandas = "2.2.1"
ruff = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Enable specific rule groups
select = ["E", "F", "W", "I", "C90"]

# Ignore specific rules
ignore = ["E501"]

# Set the maximum line length
line-length = 120

# Exclude certain directories from linting
exclude = [
    ".git",
    ".mypy_cache",
    "venv",
]

# Additional file patterns to exclude
extend-exclude = [
    "tests/fixtures/*",
]

# Fix lint issues automatically
fix = true